NEW code for release v1.0.0-beta.2

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-NEXT_PUBLIC_BACKEND_SERVER_URL=
+NEXT_PUBLIC_BACKEND_SERVER_URL=http://localhost:xxxx
 
-NEXT_PUBLIC_API_PROTOCOL=
-NEXT_PUBLIC_API_HOSTNAME=
+NEXT_PUBLIC_API_PROTOCOL=http
+NEXT_PUBLIC_API_HOSTNAME=localhost
+
+NEXT_PUBLIC_METADATA_OPENGRAPH_IMAGE=http://localhost:xxxx/path/to/og_image.png
