--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gocoop-client",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -12,7 +12,7 @@
     "@formatjs/intl-localematcher": "^0.6.0",
     "@types/negotiator": "^0.6.3",
     "negotiator": "^1.0.0",
-    "next": "15.1.4",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
